Added two blocks

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,4 +1,22 @@
-<h1>header!</h1>
-<h1>yes!</h1>
-<img src="@img/MOSHED-2022-4-7-11-49-15.gif" alt="">
-<img src="@img/Sw-KJJXd0Ps.jpg" alt="">
+<header class="header">
+  <div class="header__container container">
+    <div class="header__inner">
+      <a href="#" class="header__logo">
+        <img src="@img/logo/logo.svg" alt="noiceland" />
+      </a>
+      <nav class="header__nav nav-header">
+        <ul class="nav-header__list">
+          <li class="nav-header__item">
+            <a href="#" class="nav-header__link">Home</a>
+          </li>
+          <li class="nav-header__item">
+            <a href="#" class="nav-header__link">Latest</a>
+          </li>
+          <li class="nav-header__item">
+            <a href="#" class="nav-header__link">About</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+</header>
