--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    @@include('html/head.html', {
-        "title":"Главная"
-    })
-<body>
+  @@include('html/head.html', { "title":"Главная" })
+  <body>
     @@include('html/header.html', {})
-    
-    <img src="@img/MOSHED-2022-4-7-11-49-15.gif" alt="">
-
+    <!-- =============================== -->
+    @@include('html/main.html',{})
+    <!-- =============================== -->
     @@include('html/footer.html', {})
     <script src="js/app.min.js"></script>
-</body>
+  </body>
 </html>
