Added posts blocks

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -22,66 +22,202 @@
       <div class="posts__inner">
         <div class="posts__row">
           <div class="posts__item post">
-            <div class="posts__image post__image">
-              <img src="@img/posts/IMAGE.jpg" alt="image" />
-            </div>
-            <p class="post__subtitle">Photography</p>
-            <h3 class="post__title">
-              Helmut Lang celebrates taxi drivers worldwide in latest campaign
-            </h3>
-            <p class="post__signature">By Alessandra Ortiz</p>
+            <a href="" class="posts__link">
+              <div class="posts__image post__image">
+                <img src="@img/posts/IMAGE.jpg" alt="image" />
+              </div>
+              <p class="post__subtitle">Photography</p>
+              <h3 class="post__title">
+                Helmut Lang celebrates taxi drivers worldwide in latest campaign
+              </h3>
+              <p class="post__signature">By Alessandra Ortiz</p>
+            </a>
           </div>
           <div class="posts__item post">
-            <div class="posts__image post__image">
-              <img src="@img/posts/IMAGE.jpg" alt="image" />
-            </div>
-            <p class="post__subtitle">Photography</p>
-            <h3 class="post__title">
-              Helmut Lang celebrates taxi drivers worldwide in latest campaign
-            </h3>
-            <p class="post__signature">By Alessandra Ortiz</p>
+            <a href="" class="posts__link">
+              <div class="posts__image post__image">
+                <img src="@img/posts/IMAGE-3.jpg" alt="image" />
+              </div>
+              <p class="post__subtitle">Photraphy</p>
+              <h3 class="post__title">
+                Bowlcut launch a new summer collection that pays homage to “UK
+                legends”
+              </h3>
+              <p class="post__signature">By Alessandra Ortiz</p>
+            </a>
           </div>
           <div class="posts__item post">
-            <div class="posts__image post__image">
-              <img src="@img/posts/IMAGE.jpg" alt="image" />
-            </div>
-            <p class="post__subtitle">Photography</p>
-            <h3 class="post__title">
-              Helmut Lang celebrates taxi drivers worldwide in latest campaign
-            </h3>
-            <p class="post__signature">By Alessandra Ortiz</p>
+            <a href="" class="posts__link">
+              <div class="posts__image post__image">
+                <img src="@img/posts/IMAGE-1.jpg" alt="image" />
+              </div>
+              <p class="post__subtitle">Photography</p>
+              <h3 class="post__title">
+                Thousands of previously unseen photographs by Andy Warhol will
+                be made public this Autumn
+              </h3>
+              <p class="post__signature">By Alessandra Ortiz</p>
+            </a>
           </div>
           <div class="posts__item post">
-            <div class="posts__image post__image">
-              <img src="@img/posts/IMAGE.jpg" alt="image" />
-            </div>
-            <p class="post__subtitle">Photography</p>
-            <h3 class="post__title">
-              Helmut Lang celebrates taxi drivers worldwide in latest campaign
-            </h3>
-            <p class="post__signature">By Alessandra Ortiz</p>
+            <a href="" class="posts__link">
+              <div class="posts__image post__image">
+                <img src="@img/posts/IMAGE-4.jpg" alt="image" />
+              </div>
+              <p class="post__subtitle">Photography</p>
+              <h3 class="post__title">
+                London-based Yinka Ilori's storytelling furniture
+              </h3>
+              <p class="post__signature">By Alessandra Ortiz</p>
+            </a>
           </div>
           <div class="posts__item post">
-            <div class="posts__image post__image">
-              <img src="@img/posts/IMAGE.jpg" alt="image" />
-            </div>
-            <p class="post__subtitle">Photography</p>
-            <h3 class="post__title">
-              Helmut Lang celebrates taxi drivers worldwide in latest campaign
-            </h3>
-            <p class="post__signature">By Alessandra Ortiz</p>
+            <a href="#" class="posts__link">
+              <div class="posts__image post__image">
+                <img src="@img/posts/IMAGE-2.jpg" alt="image" />
+              </div>
+              <p class="post__subtitle">Photography</p>
+              <h3 class="post__title">
+                Anonymous Israeli art collective Broken Fingaz direct music
+                video for U2 and Beck
+              </h3>
+              <p class="post__signature">By Alessandra Ortiz</p>
+            </a>
           </div>
           <div class="posts__item post">
-            <div class="posts__image post__image">
-              <img src="@img/posts/IMAGE.jpg" alt="image" />
-            </div>
-            <p class="post__subtitle">Photography</p>
-            <h3 class="post__title">
-              Helmut Lang celebrates taxi drivers worldwide in latest campaign
-            </h3>
-            <p class="post__signature">By Alessandra Ortiz</p>
+            <a href="#" class="posts__link">
+              <div class="posts__image post__image">
+                <img src="@img/posts/IMAGE-5.jpg" alt="image" />
+              </div>
+              <p class="post__subtitle">Photography</p>
+              <h3 class="post__title">
+                Suzanne Saroff’s meticulously arranged photographs alter
+                perceptions
+              </h3>
+              <p class="post__signature">By Alessandra Ortiz</p>
+            </a>
           </div>
         </div>
+      </div>
+    </div>
+  </section>
+  <section class="main__latest-posts latest-posts">
+    <div class="latest-posts__container container">
+      <div class="latest-posts__inner">
+        <p class="latest-posts__subtitle">LATEST POSTS</p>
+        <div class="latest-posts__row">
+          <div class="latest-posts__post post">
+            <a href="#" class="latest-posts__link">
+              <div class="latest-posts__image post__image">
+                <img src="@img/posts-latest/IMAGE.png" alt="image" />
+              </div>
+              <p class="post__subtitle">Photography</p>
+              <h3 class="latest-posts__title post__title">
+                Japan House opens in mountainside to foster peak creativity.
+              </h3>
+              <p class="post__signature">By Alessandra Ortiz</p>
+            </a>
+          </div>
+
+          <div class="latest-posts__post post">
+            <a href="#" class="latest-posts__link">
+              <div class="latest-posts__image post__image">
+                <img src="@img/posts-latest/IMAGE-2.png" alt="image" />
+              </div>
+              <p class="post__subtitle">Photography</p>
+              <h3 class="latest-posts__title post__title">
+                Helmut Lang celebrates taxi drivers worldwide in latest campaign
+              </h3>
+              <p class="post__signature">By Alessandra Ortiz</p>
+            </a>
+          </div>
+
+          <div class="latest-posts__post post">
+            <a href="#" class="latest-posts__link">
+              <div class="latest-posts__image post__image">
+                <img src="@img/posts-latest/IMAGE-3.png" alt="image" />
+              </div>
+              <p class="post__subtitle">Photography</p>
+              <h3 class="latest-posts__title post__title">
+                Bowlcut launch a new summer collection that pays homage to “UK
+                legends”
+              </h3>
+              <p class="post__signature">By Alessandra Ortiz</p>
+            </a>
+          </div>
+
+          <div class="latest-posts__post post">
+            <a href="#" class="latest-posts__link">
+              <div class="latest-posts__image post__image">
+                <img src="@img/posts-latest/IMAGE-4.png" alt="image" />
+              </div>
+              <p class="post__subtitle">Photography</p>
+              <h3 class="latest-posts__title post__title">
+                Thousands of previously unseen photographs by Andy Warhol will
+                be made public this Autumn
+              </h3>
+              <p class="post__signature">By Alessandra Ortiz</p>
+            </a>
+          </div>
+
+          <div class="latest-posts__post post">
+            <a href="#" class="latest-posts__link">
+              <div class="latest-posts__image post__image">
+                <img src="@img/posts-latest/IMAGE-5.png" alt="image" />
+              </div>
+              <p class="post__subtitle">Photography</p>
+              <h3 class="latest-posts__title post__title">
+                London-based Yinka Ilori’s storytelling furniture
+              </h3>
+              <p class="post__signature">By Alessandra Ortiz</p>
+            </a>
+          </div>
+
+          <div class="latest-posts__post post">
+            <a href="#" class="latest-posts__link">
+              <div class="latest-posts__image post__image">
+                <img src="@img/posts-latest/IMAGE-6.png" alt="image" />
+              </div>
+              <p class="post__subtitle">Photography</p>
+              <h3 class="latest-posts__title post__title">
+                Anonymous Israeli art collective Broken Fingaz direct music
+                video for U2 and Beck
+              </h3>
+              <p class="post__signature">By Alessandra Ortiz</p>
+            </a>
+          </div>
+
+          <div class="latest-posts__post post">
+            <a href="#" class="latest-posts__link">
+              <div class="latest-posts__image post__image">
+                <img src="@img/posts-latest/IMAGE-7.png" alt="image" />
+              </div>
+              <p class="post__subtitle">Photography</p>
+              <h3 class="latest-posts__title post__title">
+                Suzanne Saroff’s meticulously arranged photographs alter
+                perceptions
+              </h3>
+              <p class="post__signature">By Alessandra Ortiz</p>
+            </a>
+          </div>
+
+          <div class="latest-posts__post post">
+            <a href="#" class="latest-posts__link">
+              <div class="latest-posts__image post__image">
+                <img src="@img/posts-latest/IMAGE.png" alt="image" />
+              </div>
+              <p class="post__subtitle">Photography</p>
+              <h3 class="latest-posts__title post__title">
+                Anu Ambasna’s playful illustrations celebrate club culture,
+                brown bodies and perfect paunches
+              </h3>
+              <p class="post__signature">By Alessandra Ortiz</p>
+            </a>
+          </div>
+        </div>
+        <a href="#" class="latest-posts__button button">
+          <span class="button__link"> View all latest posts </span>
+        </a>
       </div>
     </div>
   </section>
