added featured posts block

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -221,4 +221,74 @@
       </div>
     </div>
   </section>
+  <section class="main__featured-posts featured-posts">
+    <div class="featured-posts__container container">
+      <div class="featured-posts__inner">
+        <p class="featured-posts__label">featured posts</p>
+        <div class="featured-posts__row">
+          <div class="featured-posts__post post">
+            <a href="#" class="featured-posts__link">
+              <div class="featured-posts__image post__image">
+                <img src="@img/posts__featured/IMAGE.png" alt="" />
+              </div>
+              <p class="featured-posts__subtitle post__subtitle">
+                Graphic design
+              </p>
+              <h3 class="featured-posts__title post__title">
+                A Brief History of the FIFA World Cup Logo
+              </h3>
+              <p class="post__signature">by Clem Onojeghuo</p>
+            </a>
+          </div>
+
+          <div class="featured-posts__post post">
+            <a href="#" class="featured-posts__link">
+              <div class="featured-posts__image post__image">
+                <img src="@img/posts__featured/IMAGE-1.png" alt="" />
+              </div>
+              <p class="featured-posts__subtitle post__subtitle">
+                Graphic design
+              </p>
+              <h3 class="featured-posts__title post__title">
+                Need a guide to LA’s graphic design scene? Shoplifters' new
+                issue has got your back
+              </h3>
+              <p class="post__signature">by Clem Onojeghuo</p>
+            </a>
+          </div>
+
+          <div class="featured-posts__post post">
+            <a href="#" class="featured-posts__link">
+              <div class="featured-posts__image post__image">
+                <img src="@img/posts__featured/IMAGE-2.png" alt="" />
+              </div>
+              <p class="featured-posts__subtitle post__subtitle">
+                Graphic design
+              </p>
+              <h3 class="featured-posts__title post__title">
+                Fred Rowson directs film for Years and Years
+              </h3>
+              <p class="post__signature">by Clem Onojeghuo</p>
+            </a>
+          </div>
+
+          <div class="featured-posts__post post">
+            <a href="#" class="featured-posts__link">
+              <div class="featured-posts__image post__image">
+                <img src="@img/posts__featured/IMAGE-3.png" alt="" />
+              </div>
+              <p class="featured-posts__subtitle post__subtitle">
+                Graphic design
+              </p>
+              <h3 class="featured-posts__title post__title">
+                M&C Saatchi and Fontsmith collaborate on font collection for
+                House of St Barnabas
+              </h3>
+              <p class="post__signature">by Clem Onojeghuo</p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </main>
