--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,2 +1,118 @@
-<h2>hello!</h2>
-<h2>yep!</h2>
+<footer class="footer">
+  <div class="footer__container container">
+    <div class="footer__inner">
+      <div class="footer__heading">
+        <a href="#" class="footer__logo">
+          <img src="@img/logo/logo-white.svg" alt="Noiceland" />
+        </a>
+        <p class="footer__copyrights">© 2018 Noiceland™, all rights reserved</p>
+      </div>
+
+      <div class="footer__map">
+        <form action="#" class="footer__form form-footer form-top">
+          <p class="form-footer__title">subscribe to newsletter</p>
+          <div class="form-footer__input-inner">
+            <input
+              type="text"
+              placeholder="EMAIL ADDress"
+              class="form-footer__input"
+            />
+            <a href="#" class="form-footer__button"
+              ><span class="form-footer__link-button"> send </span></a
+            >
+          </div>
+        </form>
+        <nav class="footer__nav nav-category">
+          <ul class="footer__list">
+            <p class="footer__list-title">categories</p>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Animation</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Interactive Designd</a>
+            </li>
+          </ul>
+
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="#" class="footer__link">Architecture</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Miscellaneous</a>
+            </li>
+          </ul>
+
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="#" class="footer__link">Graphic Design</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Photography</a>
+            </li>
+          </ul>
+
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="#" class="footer__link">Illustration</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Productt Design</a>
+            </li>
+          </ul>
+
+          <form action="#" class="footer__form form-footer form-bottom">
+            <p class="form-footer__title">subscribe to newsletter</p>
+            <div class="form-footer__input-inner">
+              <input
+                type="text"
+                placeholder="EMAIL ADDress"
+                class="form-footer__input"
+              />
+              <a href="#" class="form-footer__button"
+                ><span class="form-footer__link-button"> send </span></a
+              >
+            </div>
+          </form>
+        </nav>
+
+        <nav class="footer__nav nav-info">
+          <ul class="footer__list">
+            <p class="footer__list-title">INFORMATION</p>
+            <li class="footer__item">
+              <a href="#" class="footer__link">about</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">contact</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">terms</a>
+            </li>
+          </ul>
+
+          <ul class="footer__list">
+            <p class="footer__list-title">follow us</p>
+            <li class="footer__item">
+              <a href="#" class="footer__link">instagram</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">facebook</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">twitter</a>
+            </li>
+          </ul>
+
+          <ul class="footer__list">
+            <p class="footer__list-title">Template</p>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Image License Info</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Powered by Webflow</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </div>
+</footer>
